--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 html {
     display: block;
     background-image: url("./assets/background.jpg");
+    background-size: cover;
+    background-attachment: fixed;
     background-repeat: no-repeat;
+    background-position: center center;
 }
 
 h1 {
@@ -9,11 +12,23 @@ h1 {
     font-size: 35px;
     color: white;
     padding-left: 40px;
-    padding-top: 30px;
+    padding-top: 20px;
+    background: transparent;
+    border: 0;
+}
+
+header a {
+    color: white;
+    text-decoration: none;
 }
 
 .topnav {
     background-color: rgb(0, 0, 0, 0.6);
+    /* border-width: 1px;
+    border-color: white;
+    border-style: groove; */
+    margin-left: -8px;
+    margin-right: -8px;
     overflow: hidden;
     align-content: center;
     display: flex;
@@ -31,7 +46,8 @@ h1 {
     font-size: 26px;
     color: white;
     border: none;
-    background-color: inherit;
+    background: transparent;
+    background-color: none;
     outline: none;
     cursor: pointer;
 }
@@ -47,25 +63,26 @@ h1 {
 
 .dropdown {
     float: left;
-    overflow: hidden;
+
 }
 
 .dropdown .drop3 {
     cursor: pointer;
     border: none;
     outline: none;
-    padding: 15px;
+    padding: 20px 70px;
     color: white;
     background-color: inherit;
+    width: 250px;
 }
 
 .policy-content {
     display: none;
     position: absolute;
-    margin-top: 60px;
+    margin-top: 73px;
     background-color: rgb(0, 0, 0, 0.6);
-    min-width: 200px;
-    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.6);
+    min-width: 250px;
+    box-shadow:  rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
 
@@ -81,6 +98,67 @@ h1 {
 .show {
     display: block;
 }
+
+.spacer {
+    height: 1100px;
+}
+
+.stickyNav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.stickyDrop {
+    position: fixed;
+    top: 0;
+    width: inherit;
+}
+
+.stickyFooter {
+    background: rgba(0, 0, 0, 0.65);
+    position: fixed;
+    width: 100%;
+    height: 45px;
+    bottom: 0;
+    flex-shrink: 0;
+    padding: 6px;
+    font-size: 22px;
+    margin-left: -10px;
+    color: white;
+    font-family: 'Gugi', cursive;
+}
+
+footer p {
+    float: right;
+    margin-right: 20px;
+    margin-top: 6px;
+}
+
+.fa {
+    padding: 10px;
+    font-size: 16px;
+    width: 16px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 5px;
+    border-radius: 50%;
+    float: left;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
 
 /* .borderTop {
     position: fixed;
