--- a/style.css
+++ b/style.css
@@ -100,7 +100,15 @@ header a {
 }
 
 .spacer {
-    height: 1100px;
+    height: 1600px;
+    width: 300px;
+    background-color: rgb(128, 128, 128, 0.4);
+    border-style: solid;
+    border-width: 4px;
+    border-color: rgb(255, 255, 255, 0.5);
+    font-size: 26px;
+    margin-left: 25px;
+    margin-top: 25px;
 }
 
 .stickyNav {
